intial commit/ DONE

--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.19.0",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.12.0",
+    "serverless-plugin-include-dependencies": "^4.1.0",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser-for-serverless": "^1.0.1",
     "twilio": "^3.36.0"
   }
 }
